# scp2

./: .gitignore  README.md  pyproject.toml
scp2/: core.py
