[tool.poetry]
name = "scp2"
version = "0.0.1"
description = "scp real over ssh"
authors = ["alingse <alingse@foxmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.7.0"
paramiko = "^2.7.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
scp2 = 'scp2.core:scp2'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
